--- a/src/components/hero/hero.component.scss
+++ b/src/components/hero/hero.component.scss
@@ -45,7 +45,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 9rem 4.5rem;
+  padding: 9rem 0 9rem 0;
   text-align: center !important;
   flex-direction: column;
 }
@@ -59,4 +59,32 @@
   border-radius: 4px;
   padding: 10px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.skill{
+  &:hover{
+    text-shadow: #6e07f3;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .hero-section{
+    padding: 10px;
+  }
+
+  .hero-title{
+    font-size: 1.5rem;
+  }
+
+  .img-container{
+    margin-top: 0;
+  }
+  .hero-device {
+   
+    margin-top: 0;
+    img {
+      width: 250px !important;
+    }}
+  
 }
